# mcweather

./: .gitignore  ChangeLog  Makefile  Makefile.vars.in  configure  configure.ac  dwm.m4  getvers.sh  latest_release  mkarchive.sh  mkrelease.sh
apps/: Makefile
apps/mcweather/: .gitignore  Makefile  mcweather.cc
apps/mcweathercgi/: .gitignore  Makefile  mcweathercgi.cc
apps/mcweatherd/: .gitignore  DwmMcweatherResponder.cc  DwmMcweatherResponder.hh  DwmMcweatherServer.cc  DwmMcweatherServer.hh  Makefile  mcweatherd.cc
classes/: Makefile
classes/include/: .gitignore  DwmMcweatherCache.hh  DwmMcweatherConfig.hh  DwmMcweatherCurrentConditions.hh  DwmMcweatherPeriodForecast.hh  DwmMcweatherPeriodForecasts.hh  DwmMcweatherPointInfo.hh  DwmMcweatherServiceConfig.hh  DwmMcweatherTCPAddress.hh  DwmMcweatherUtils.hh  DwmMcweatherVersion.hh.in  DwmMcweatherWeatherConfig.hh  DwmMcweatherWeatherFetcher.hh  DwmMcweatherWeatherdRequest.hh  DwmMcweatherWebUtils.hh  Makefile
classes/lib/: .gitignore
classes/src/: .gitignore  DwmMcweatherCache.cc  DwmMcweatherConfigLex.lex  DwmMcweatherConfigParse.y  DwmMcweatherCurrentConditions.cc  DwmMcweatherPeriodForecast.cc  DwmMcweatherPeriodForecasts.cc  DwmMcweatherPointInfo.cc  DwmMcweatherServiceConfig.cc  DwmMcweatherTCPAddress.cc  DwmMcweatherUtils.cc  DwmMcweatherVersion.cc  DwmMcweatherWeatherConfig.cc  DwmMcweatherWeatherFetcher.cc  DwmMcweatherWebUtils.cc  Makefile
classes/tests/: .gitignore  Makefile  TestConfig.cc  TestPeriodForecast.cc  forecast.json  hourlyForecast.json  test.cfg
etc/: Makefile  mcweatherd.cfg.example
etc/freebsd/rc.d/: Makefile  mcweatherd
etc/linux/systemd/system/: Makefile  mcweatherd.service
packaging/: .gitignore  Makefile  Mcweather.pc.in  debcontrol.in  debpostinst  debpostrm  debprerm  fbsd_manifest.in
